c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/void_array_in_cast.c
int main(void) {
    (void(*)[3]) 4; // the element type in an array declarator must be complete
    return 0;
}